# mate-wayland-session

./: .build.yml  .gitignore  .travis.yml  AUTHORS  Makefile.am  NEWS  README  README.md  TODO  autogen.sh  configure.ac  makefile.am  makepot  mate-session-wayland.pot  mate-wayland-session.pot  meson-postinstall.sh  meson.build  wayfire.ini
.github/workflows/: builds.yml  debian.sh  fedora.sh  release.yml  ubuntu.sh
.tx/: config
data/: 10_mate-wayland.gschema.override  MATE.desktop  Makefile.am  firedecor.config  makefile.am  mate-wayland-components.sh  mate-wayland.sh  meson.build  settings.ini  wayfire.ini
data/mate/: Makefile.am  makefile.am  meson.build
po/: LINGUAS  POTFILES.in  POTFILES.skip  ca.po  cs.po  da.po  de.po  en_GB.po  es.po  eu.po  fr.po  gl.po  hu.po  id.po  ie.po  it.po  ja.po  lt.po  mate-wayland-session.pot  ms.po  nb.po  nl.po  oc.po  pl.po  pt.po  pt_BR.po  ru.po  sl.po  sr.po  tr.po  uk.po  zh_CN.po  zh_TW.po
session/: MATE.desktop  MATE.desktop.in  Makefile.am  mate-wayland-components.sh  mate-wayland.sh  meson.build
