install_data('10_mate-wayland.gschema.override',
 install_dir: join_paths(get_option('datadir'), 'glib-2.0', 'schemas'),
)

install_data('firedecor.config',
 install_dir: join_paths(get_option('datadir'), 'doc', 'firedecor'),
)

install_data('settings.ini',
 install_dir: join_paths(get_option('sysconfdir'), 'gtk-3.0'),
)

subdir('mate')
