install-data-local:
	mkdir -p $(datadir)/firedecor
	mkdir -p $(datadir)/firedecor/button-styles/
	mkdir -p $(datadir)/firedecor/button-styles/mate/

iconsdir = $(datadir)/firedecor/button-styles/mate/

icons_DATA =						\
	close.png						\
	close-hovered.png				\
	close-pressed.png				\
	minimize.png					\
	minimize-hovered.png			\
	minimize-pressed.png			\
	toggle-maximize.png				\
	toggle-maximize-hovered.png		\
	$(srcdir)/toggle-maximize-pressed.png


EXTRA_DIST =		\
	$(icons_DATA)	\
	meson.build

