iconsdir = $(datadir)/firedecor/button-styles/mate/

dist_icons_DATA =						\
	close.png						\
	close-hovered.png				\
	close-pressed.png				\
	minimize.png					\
	minimize-hovered.png			\
	minimize-pressed.png			\
	toggle-maximize.png				\
	toggle-maximize-hovered.png		\
	$(srcdir)/toggle-maximize-pressed.png


EXTRA_DIST =		\
	meson.build

