window_buttons = ['close.png', 'close-hovered.png', 'close-pressed.png', 'minimize.png', 'minimize-hovered.png', 'minimize-pressed.png', 'toggle-maximize.png', 'toggle-maximize-hovered.png', 'toggle-maximize-pressed.png',
]

foreach button: window_buttons
    install_data(
    join_paths( button),
    install_dir: join_paths(get_option('datadir'), 'firedecor', 'button-styles','mate'),
  )
endforeach
